Renamed masked component to masked-text-field #24

--- a/src/components/masked-text-field/masked-text-field.scss
+++ b/src/components/masked-text-field/masked-text-field.scss
@@ -1,6 +1,6 @@
 @import '../../scss/variables.scss';
 
-.masked {
+.masked-text-field {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
