--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -117,7 +117,7 @@
   &__field-focus {
     margin-bottom: 20px;
   }
-  &__masked-field {
+  &__masked-text-field {
     margin-bottom: 40px;
   }
   &__date-dropdown {
