--- a/src/components/font-sample/font-sample.pug
+++ b/src/components/font-sample/font-sample.pug
@@ -1,6 +1,6 @@
 //- параметр type принимает: 'h1', 'h2', 'h3' или 'p', параметр modifierName: 'biggest', 'bigger', 'big', 'normal'
 
-mixin font-sample({ type, modifierName, headingName, headingDescription })
+mixin font-sample({ tagType, modifierName, headingName, headingDescription })
 
   .font-sample
     .font-sample__name(class=`font-sample__name_size_${modifierName}`)= headingName
