--- a/src/components/sign-in-card/sign-in-card.pug
+++ b/src/components/sign-in-card/sign-in-card.pug
@@ -17,4 +17,4 @@ mixin sign-in-card()
         .sign-in-card__sign-up
           .sign-in-card__sign-up-text Нет аккаунта на Toxin?
           .sign-in-card__sign-up-button 
-          +button({ color: 'white', size: 'big', text: 'Cоздать' })
+          +button({ colorModifier: 'white', sizeModifier: 'big', text: 'Cоздать' })
