--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -29,15 +29,15 @@ block content
         +sign-up-card()
     .cards__column
       .cards__booking-room-card.js-cards__booking-room-card
-        +booking-room-card({ number: '888', costForDay: '9 990', isLux: true })
+        +booking-room-card({ roomNumber: '888', costForDay: '9 990', isLux: true })
       .cards__sign-in-card
         +sign-in-card()
     .cards__column
       .cards__calendar
         .datepicker-here(data-prev-html='<div class="datepicker__arrow">arrow_back</div>', data-next-html='<div class="datepicker__arrow">arrow_forward</div>')
       .cards__room-card.js-cards__room-card
-        +room-card({ images: ['room1.jpg', 'room2.jpg', 'room3.jpg', 'room4.jpg'], number: '888', isLux: true, costForDay: '9 990', activeStars: 5, numOfComments: '145' })
+        +room-card({ images: ['room1.jpg', 'room2.jpg', 'room3.jpg', 'room4.jpg'], roomNumber: '888', isLux: true, costForDay: '9 990', activeStars: 5, numOfComments: '145' })
       .cards__room-card
-        +room-card({ images: ['room2.jpg', 'room3.jpg', 'room4.jpg', 'room5.jpg'], number: '840', costForDay: '9 990', activeStars: 4, numOfComments: '65' })
+        +room-card({ images: ['room2.jpg', 'room3.jpg', 'room4.jpg', 'room5.jpg'], roomNumber: '840', costForDay: '9 990', activeStars: 4, numOfComments: '65' })
 
 block footer
