--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -45,7 +45,7 @@ block content
       .form-elements__field-focus
         +text-field({ type: 'text', title: 'text field', value: 'This is pretty awesome' })
       .form-elements__dropdown.form-elements__dropdown_position_left.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
       .form-elements__masked-text-field.js-form-elements__masked-text-field
         +masked-text-field({ title: 'masked text field' })
       .form-elements__date-dropdown.js-form-elements__date-dropdown
@@ -92,7 +92,7 @@ block content
       .form-elements__rate-button
         +rate-button({ activeStars: '5' })
       .form-elements__dropdown.form-elements__dropdown_position_mid.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__rich-checkbox-text rich checkbox buttons
       .form-elements__rich-checkbox
         +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
@@ -101,13 +101,13 @@ block content
         +range-slider({ title: 'range slider' })
       .form-elements__buttons-text buttons
       .form-elements__button.form-elements__button_color_purple
-        +button({ color: 'purple', size: 'big', text: 'click me' })
+        +button({ colorModifier: 'purple', sizeModifier: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_purple
-        +button({ color: 'purple', size: 'big', text: 'click me' })
+        +button({ colorModifier: 'purple', sizeModifier: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({ color: 'white', size: 'big', text: 'click me' })
+        +button({ colorModifier: 'white', sizeModifier: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({ color: 'white', size: 'big', text: 'click me' })
+        +button({ colorModifier: 'white', sizeModifier: 'big', text: 'click me' })
       .form-elements__text-button
         +text-button({  text: 'click me'  })
       .form-elements__text-button
@@ -116,13 +116,13 @@ block content
         +submit-button({ text: 'Перейти к оплате' })
       .form-elements__pagination-text pagination
       .form-elements__pagination
-        +pagination({ current: 1, last: 15, caption: '1 - 12 из 100+ вариантов аренды' })
+        +pagination({ currentPage: 1, lastPage: 15, captionText: '1 - 12 из 100+ вариантов аренды' })
       .form-elements__dropdown.form-elements__dropdown_position_right.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, buttons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__bullet-list-text bullet list
       .form-elements__bullet-list
         +bullet-list({ bulletList: consts.bulletList })
     .form-elements__comment.js-form-elements__comment
-      +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })
+      +comment({ avatarImage: 'avatar1.jpg', userName: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, commentText: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })
 
 block footer
