--- a/src/pages/websitePages/room-details/room-details.pug
+++ b/src/pages/websitePages/room-details/room-details.pug
@@ -44,9 +44,9 @@ block content
           .room-details__num-of-comments 2 отзыва
         .room-details__comments
           .room-details__comment.js-room-details__comment
-            +comment({ avatar: 'avatar1.jpg', name: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })      
+            +comment({ avatarImage: 'avatar1.jpg', userName: 'Мурад Сарафанов', dateText: '5 дней назад', likeButton: { count: 12, isLiked: true }, commentText: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.' })      
           .room-details__comment.js-room-details__comment
-            +comment({ avatar: 'avatar2.jpg', name: 'Патрисия Стёклышкова', dateText: 'Неделю назад', likeButton: { count: 2 }, text: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент' })      
+            +comment({ avatarImage: 'avatar2.jpg', userName: 'Патрисия Стёклышкова', dateText: 'Неделю назад', likeButton: { count: 2 }, commentText: 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент' })      
         .room-details__wrapper
           .room-details__rules
             .room-details__text.room-details__text_with-margin Правила
@@ -56,4 +56,4 @@ block content
             .room-details__text Отмена
             .room-details__cancel-text Бесплатная отмена в течении 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
       section.room-details__booking-room-card.js-room-details__booking-room-card
-        +booking-room-card({ number: '888', costForDay: '9 990', isLux: true })
+        +booking-room-card({ roomNumber: '888', costForDay: '9 990', isLux: true })
