--- a/src/pages/websitePages/search-room/search-room.pug
+++ b/src/pages/websitePages/search-room/search-room.pug
@@ -73,4 +73,4 @@ block content
             .search-room__room-card.js-search-room__room-card
               +room-card(consts.roomCard12)
           .search-room__pagination
-            +pagination({ current: 1, last: 15, caption: '1 - 12 из 100+ вариантов аренды' })
+            +pagination({ currentPage: 1, lastPage: 15, captionText: '1 - 12 из 100+ вариантов аренды' })
