--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -28,7 +28,7 @@ mixin header({ navList, userName, loginButtonText, registerButtonText })
         else
           .header__buttons.js-header__buttons
             .header__button
-                +button({ sizeModifier: 'small', colorModifier: 'white', text: loginButtonText })
+                +button({ size: 'small', color: 'white', text: loginButtonText })
             .header__button
-                +button({ sizeModifier: 'small', colorModifier: 'purple', text: registerButtonText })
+                +button({ size: 'small', color: 'purple', text: registerButtonText })
         .header__burger.js-header__burger dehaze
