--- a/src/components/font-sample/font-sample.scss
+++ b/src/components/font-sample/font-sample.scss
@@ -8,16 +8,16 @@
     color: $main-color-light;
     font-weight: normal;
     &_size {
-      &_biggest {
+      &_h1 {
         font-size: 1.5rem;
       }
-      &_bigger {
+      &_h2 {
         font-size: 1.1875rem;
       }
-      &_big {
+      &_h3 {
         font-size: 0.75rem;
       }
-      &_normal {
+      &_p {
         font-size: 0.875rem;
       }
     }
@@ -26,25 +26,25 @@
     margin: 0;
     margin-left: 30px;
     &_size {
-      &_biggest {
+      &_h1 {
         font-size: 1.5rem;
         font-family: $secondary-font;
         font-weight: bold;
         color: $main-color-darker;
       }
-      &_bigger {
+      &_h2 {
         font-size: 1.1875rem;
         font-family: $secondary-font;
         font-weight: bold;
         color: $main-color-darker;
       }
-      &_big {
+      &_h3 {
         font-size: 0.75rem;
         font-weight: bold;
         text-transform: uppercase;
         color: $main-color-darker;
       }
-      &_normal {
+      &_p {
         font-size: 0.875rem;
         font-weight: normal;
         color: $main-color-dark;
