--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -45,7 +45,7 @@ block content
       .form-elements__field-focus
         +text-field({ type: 'text', title: 'text field', value: 'This is pretty awesome' })
       .form-elements__dropdown.form-elements__dropdown_position_left.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, hasButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'] })
       .form-elements__masked-text-field.js-form-elements__masked-text-field
         +masked-text-field({ title: 'masked text field' })
       .form-elements__date-dropdown.js-form-elements__date-dropdown
@@ -92,7 +92,7 @@ block content
       .form-elements__rate-button
         +rate-button({ activeStars: '5' })
       .form-elements__dropdown.form-elements__dropdown_position_mid.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownMidInFormEl, hasButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__rich-checkbox-text rich checkbox buttons
       .form-elements__rich-checkbox
         +rich-checkbox({ richCheckboxes: consts.richCheckboxes })
@@ -101,13 +101,13 @@ block content
         +range-slider({ title: 'range slider' })
       .form-elements__buttons-text buttons
       .form-elements__button.form-elements__button_color_purple
-        +button({ colorModifier: 'purple', sizeModifier: 'big', text: 'click me' })
+        +button({ color: 'purple', size: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_purple
-        +button({ colorModifier: 'purple', sizeModifier: 'big', text: 'click me' })
+        +button({ color: 'purple', size: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({ colorModifier: 'white', sizeModifier: 'big', text: 'click me' })
+        +button({ color: 'white', size: 'big', text: 'click me' })
       .form-elements__button.form-elements__button_color_white
-        +button({ colorModifier: 'white', sizeModifier: 'big', text: 'click me' })
+        +button({ color: 'white', size: 'big', text: 'click me' })
       .form-elements__text-button
         +text-button({  text: 'click me'  })
       .form-elements__text-button
@@ -118,7 +118,7 @@ block content
       .form-elements__pagination
         +pagination({ currentPage: 1, lastPage: 15, captionText: '1 - 12 из 100+ вариантов аренды' })
       .form-elements__dropdown.form-elements__dropdown_position_right.js-form-elements__dropdown
-        +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, isButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
+        +dropdown({ title: 'dropdown', elements: consts.dropdownRightInFormEl, hasButtons: true, resultDefault: 'Сколько гостей', keyWords: ['гость','гостя','гостей'], isExpanded: true })
       .form-elements__bullet-list-text bullet list
       .form-elements__bullet-list
         +bullet-list({ bulletList: consts.bulletList })
