--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -20,9 +20,9 @@ mixin dropdown({ title, elements, hasButtons, resultDefault, keyWords=null, isEx
         - const { name, nameForms, value = 0, min = 0, max = 5 } = item
         .dropdown__element.js-dropdown__element
           .dropdown__name.js-dropdown__name(data-name-forms=nameForms)= name
-          button.dropdown__button-minus.js-dropdown__button-minus(type="button") -
+          button.dropdown__button.dropdown__button_has-margin.js-dropdown__button(type="button" data-type="minus") -
           .dropdown__count.js-dropdown__count(data-min=min, data-max=max)= value
-          button.dropdown__button-plus.js-dropdown__button-plus(type="button") +
+          button.dropdown__button.js-dropdown__button(type="button" data-type="plus") +
       if(hasButtons)
         .dropdown__bottom-buttons.js-dropdown__bottom-buttons
           .dropdown__clear.js-dropdown__clear
