--- a/src/components/social-media/social-media.scss
+++ b/src/components/social-media/social-media.scss
@@ -5,8 +5,8 @@
     &:last-child {
       margin-right: 0;
     }
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 24px;
+    height: 24px;
     &_twitter {
       background: url(./img/twitter.svg) no-repeat center;
     }
