--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -5,8 +5,8 @@
   font-size: 1.1875rem;
   line-height: 1.8125rem;
   &__color-box {
-    width: 4.375rem;
-    height: 4.375rem;
+    width: 70px;
+    height: 70px;
     border-radius: 6px;
     &_color {
       &_dark-shade-100 {
