--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -80,8 +80,8 @@
       font-weight: bold;
       color: $main-color-light;
       text-align: center;
-      width: 1.25rem;
-      height: 1.25rem;
+      width: 20px;
+      height: 20px;
       border: 1px solid $main-color-light;
       border-radius: 50%;
       box-sizing: border-box;
