--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -17,12 +17,12 @@
     &::before {
       content: '';
       position: absolute;
-      width: 0.625rem;
-      height: 0.625rem;
+      width: 10px;
+      height: 10px;
       background: $main-color-light;
       border-radius: 50%;
       margin-left: -21px;
-      top: 0.375rem;
+      top: 6px;
     }
   }
 }
