--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -20,10 +20,10 @@
     &:checked + .checkbox__box::before {
       content: '';
       position: absolute;
-      top: 0.25rem;
-      left: 0.375rem;
-      width: 0.375rem;
-      height: 0.5rem;
+      top: 4px;
+      left: 6px;
+      width: 6px;
+      height: 8px;
       border-width: 0 2px 2px 0;
       -moz-border-image: $secondary-color-gradient;
       -webkit-border-image: $secondary-color-gradient;
@@ -38,8 +38,8 @@
   }
   &__box {
     position: absolute;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 20px;
+    height: 20px;
     box-sizing: border-box;
     margin-left: -30px;
     border: 1px solid $main-color-light;
