--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -27,12 +27,12 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     text-align: center;
-    width: 2.75rem;
+    width: 44px;
     color: $main-color-dark;
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 2.6875rem;
+    width: 43px;
     border-radius: 4px;
     background-color: white;
     user-select: none;
@@ -44,7 +44,7 @@
   &__input {
     width: 100%;
     outline: none;
-    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
+    padding: 13px 5px 11px 15px;
     background: #ffffff;
     border: 1px solid $main-color-light;
     box-sizing: border-box;
