--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -19,12 +19,12 @@
     font-size: 1.5rem;
     line-height: 2.5rem;
     text-align: center;
-    width: 2.75rem;
+    width: 44px;
     color: $main-color-dark;
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 2.6875rem;
+    width: 43px;
     border-radius: 4px;
     background-color: white;
     user-select: none;
@@ -35,7 +35,7 @@
   }
   &__input {
     width: 100%;
-    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
+    padding: 13px 5px 11px 15px;
     background: #ffffff;
     border: 1px solid $main-color-light;
     box-sizing: border-box;
@@ -96,8 +96,8 @@
     font-size: 1.125rem;
     color: $main-color;
     border: 1px solid $main-color-light;
-    width: 1.875rem;
-    height: 1.875rem;
+    width: 30px;
+    height: 30px;
     text-align: center;
     background: none;
     border-radius: 50%;
@@ -108,7 +108,7 @@
     transition: color 0.2s, border-color 0.2s, box-shadow 0.1s;
     &_has-margin {
       margin-left: auto;
-      margin-right: 2rem;
+      margin-right: 32px;
     }
     &:disabled {
       color: $main-color-lighter;
@@ -126,7 +126,7 @@
   &__count {
     position: absolute;
     font-weight: bold;
-    right: 2.6875rem;
+    right: 43px;
     user-select: none;
   }
   &__bottom-buttons {
