--- a/src/components/expandable-checkbox/expandable-checkbox.scss
+++ b/src/components/expandable-checkbox/expandable-checkbox.scss
@@ -17,9 +17,9 @@
     color: $main-color-darker;
   }
   &__arrow {
+    width: 44px;
     font-family: $material-icons;
     font-size: 1.5rem;
-    width: 2.75rem;
     line-height: 2.75rem;
     color: $main-color;
     text-align: center;
