--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -96,8 +96,8 @@
     font-size: 1.5rem;
     color: $main-color;
     line-height: 1.25rem;
-    width: 1.5rem;
-    height: 1.3125rem;
+    width: 24px;
+    height: 21px;
     cursor: pointer;
     user-select: none;
   }
