--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,6 +1,6 @@
 .logotype {
   background: url(./img/logo.svg) no-repeat;
   background-size: cover;
-  width: 3rem;
-  height: 3rem;
+  width: 48px;
+  height: 48px;
 }
