--- a/src/components/radio-button/radio-button.scss
+++ b/src/components/radio-button/radio-button.scss
@@ -8,7 +8,7 @@
   }
   &__label {
     display: inline-block;
-    padding-left: 1.875rem;
+    padding-left: 30px;
     font-size: 0.875rem;
     line-height: 1.25rem;
     color: $main-color;
@@ -25,10 +25,10 @@
     &:checked + .radio-button__box::before {
       content: '';
       position: absolute;
-      top: 0.1875rem;
-      left: 0.1875rem;
-      width: 0.75rem;
-      height: 0.75rem;
+      top: 3px;
+      left: 3px;
+      width: 12px;
+      height: 12px;
       background: $secondary-color-gradient;
       border-radius: 50%;
       box-sizing: border-box;
@@ -36,10 +36,10 @@
   }
   &__box {
     position: absolute;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 20px;
+    height: 20px;
     box-sizing: border-box;
-    margin-left: -1.875rem;
+    margin-left: -30px;
     border: 1px solid $main-color-light;
     border-radius: 50%;
     background-color: white;
