--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -17,7 +17,7 @@
   }
   &__input {
     width: 100%;
-    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
+    padding: 13px 5px 11px 15px;
     background: #ffffff;
     border: 1px solid $main-color-light;
     box-sizing: border-box;
