--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -20,10 +20,10 @@
     &:checked + .toggle__box::before {
       content: '';
       position: absolute;
-      top: 0.1875rem;
-      left: 1.4375rem;
-      width: 0.75rem;
-      height: 0.75rem;
+      top: 3px;
+      left: 23px;
+      width: 12px;
+      height: 12px;
       border-radius: 10px;
       background: $secondary-color-gradient;
       box-sizing: border-box;
@@ -31,8 +31,8 @@
   }
   &__box {
     position: absolute;
-    width: 2.5rem;
-    height: 1.25rem;
+    width: 40px;
+    height: 20px;
     box-sizing: border-box;
     margin-left: -50px;
     border: 1px solid $main-color-light;
@@ -41,10 +41,10 @@
     &::before {
       content: '';
       position: absolute;
-      top: 0.1875rem;
-      left: 0.1875rem;
-      width: 0.75rem;
-      height: 0.75rem;
+      top: 3px;
+      left: 3px;
+      width: 12px;
+      height: 12px;
       // ниже градиент нужен, что бы при снятии чека кругляш не перерисовывался
       background: linear-gradient($main-color-light, $main-color-light);
       border-radius: 10px;
