--- a/src/components/about-room/about-room.scss
+++ b/src/components/about-room/about-room.scss
@@ -1,13 +1,15 @@
 @import '../../scss/variables.scss';
 
 .about-room {
-  width: 100%;
-  display: flex;
-  border-bottom: 1px solid $main-color-lighter;
-  margin-bottom: 20px;
-  &:last-child {
-    margin-bottom: 0px;
-    border: none;
+  &__element {
+    width: 100%;
+    display: flex;
+    border-bottom: 1px solid $main-color-lighter;
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0px;
+      border: none;
+    }
   }
   &__icon {
     font-family: $material-icons;
@@ -24,6 +26,7 @@
     margin: 0;
     font-size: 0.875rem;
     line-height: 1.5rem;
+    color: $main-color-dark;
     font-weight: normal;
     &_bold {
       font-weight: bold;
