Fixed color in footer #21

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -70,7 +70,7 @@
   }
   &__subscription-text {
     line-height: 1.5rem;
-    color: $main-color-darker;
+    color: $main-color-dark;
     margin-bottom: 20px;
   }
   &__subscription-field {
