--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -15,7 +15,7 @@ mixin dropdown({ title, elements, hasButtons, resultDefault, keyWords=null, isEx
     .dropdown__wrapper.js-dropdown__wrapper
       .dropdown__arrow expand_more
       input.dropdown__input.js-dropdown__input(class=isExpanded && "dropdown__input_expanded", readonly, type="text", value=resultDefault)
-    .dropdown__elements.js-dropdown__elements(class=isExpanded && "dropdown__elements_expanded")
+    .dropdown__list.js-dropdown__list(class=isExpanded && "dropdown__list_expanded")
       each item in elements
         - const { name, nameForms, value = 0, min = 0, max = 5 } = item
         .dropdown__element.js-dropdown__element
