--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -56,7 +56,7 @@
       border-color: $main-color;
     }
   }
-  &__elements {
+  &__list {
     border-left: 1px solid $main-color;
     border-right: 1px solid $main-color;
     border-bottom: 0px solid $main-color;
