Added default value to params in pug mixins

--- a/src/components/about-room/about-room.pug
+++ b/src/components/about-room/about-room.pug
@@ -1,5 +1,4 @@
-//- Сюда передаётся массив [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"}, [{...}] ]
-mixin about-room({ roomDetails })
+mixin about-room({ roomDetails = [{ materIcon: 'insert_emoticon', title: 'Комфорт', description: 'Шумопоглащающие стены' }, {}] })
 
   .about-room  
     each item in roomDetails
