--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,4 +1,4 @@
-mixin bullet-list({ bulletList })
+mixin bullet-list({ bulletList = ['Нельзя с питомцами', 'string'] })
 
   ul.bullet-list
     each item in bulletList
