--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,4 +1,4 @@
-mixin checkbox({ label, isChecked })
+mixin checkbox({ label = "Можно курить", isChecked = false })
 
   .checkbox
     label.checkbox__label
