--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,4 +1,4 @@
-mixin date-dropdown({ isFilter=false, title, title2 })
+mixin date-dropdown({ isFilter = false, title = 'title1', title2 = 'title2' })
 
   if (isFilter)
     .date-dropdown.js-date-dropdown
