--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,4 +1,4 @@
-mixin range-slider({ title })
+mixin range-slider({ title = 'title' })
 
   .range-slider.js-range-slider
     .range-slider__wrapper
