--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,4 +1,4 @@
-mixin text-field({ title, subtitle, value, placeholder, type="text", isRequired })
+mixin text-field({ title = '', subtitle = '', value = '', placeholder = '', type='text', isRequired = false })
 
   .text-field
     .text-field__title= title
