--- a/src/components/block-color/block-color.pug
+++ b/src/components/block-color/block-color.pug
@@ -1,4 +1,4 @@
-mixin block-color({color, colorName, colorHex})
+mixin block-color({ color = 'dark-shade-100', colorName = 'Dark Shade 100%', colorHex = '#1F2041' })
 
   .block-color
     .block-color__color-box(class=`block-color__color-box_color_${color}`)
