--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,4 +1,4 @@
-mixin pagination({ currentPage, lastPage, captionText })
+mixin pagination({ currentPage = 1, lastPage = 15, captionText = 'string' })
 
   .pagination
     .pagination__wrapper
