--- a/src/components/submit-button/submit-button.pug
+++ b/src/components/submit-button/submit-button.pug
@@ -1,4 +1,4 @@
-mixin submit-button({ text })
+mixin submit-button({ text = 'string' })
 
   .submit-button
     button.submit-button__button(type="submit")= text
