Fixed colors-type and other #17

--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -19,7 +19,7 @@ block header
 
 block content  
   .cards__logo
-      .cards__wrapper_for-logo
+      .cards__logo-wrapper
         +logo()
   .cards__content
     .cards__column
