--- a/src/pages/ui-kit/headers-footers/headers-footers.scss
+++ b/src/pages/ui-kit/headers-footers/headers-footers.scss
@@ -10,7 +10,7 @@
       padding-left: 2.1vw;
     }
   }
-  &__wrapper_for-logo {
+  &__logo-wrapper {
     position: absolute;
     top: 30px;
   }
